<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <!-- <Button
        android:id="@+id/pickDate"
        android:text="Set Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"/>-->

    <EditText
        android:id="@+id/editTxt_created_date"
        android:hint="@string/Date"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        style="@style/EditTextStyle"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/editTxt_loc_type"
        android:hint="@string/LocationType"
        android:inputType="text"
        android:layout_marginTop="12dp"
        style="@style/EditTextStyle"
        android:layout_below="@+id/editTxt_created_date" />

    <EditText
        android:id="@+id/editTxt_incident_zip"
        android:hint="@string/IncidentZip"
        android:inputType="text"
        android:layout_marginTop="12dp"
        style="@style/EditTextStyle"
        android:layout_below="@+id/editTxt_loc_type" />

    <EditText
        android:id="@+id/editTxt_incident_address"
        android:hint="@string/IncidentAddress"
        android:inputType="text"
        android:layout_marginTop="12dp"
        style="@style/EditTextStyle"
        android:layout_below="@+id/editTxt_incident_zip" />

    <EditText
        android:id="@+id/editTxt_city"
        android:hint="@string/City"
        android:inputType="text"
        style="@style/EditTextStyle"
        android:layout_below="@+id/editTxt_incident_address"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/editTxt_borough"
        android:hint="@string/Borough"
        android:inputType="text"
        style="@style/EditTextStyle"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/editTxt_city"
        android:layout_alignStart="@+id/editTxt_loc_type" />

    <EditText
        android:id="@+id/editTxt_latitude"
        android:hint="@string/Latitude"
        android:inputType="text"
        style="@style/EditTextStyle"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/editTxt_longitude" />

    <EditText
        android:id="@+id/editTxt_longitude"
        android:hint="@string/Longitude"
        android:inputType="text"
        style="@style/EditTextStyle"
        android:layout_below="@+id/editTxt_borough"
        android:layout_alignStart="@+id/editTxt_borough"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btn_cancel"
        android:hint="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="22dp"
        android:typeface="monospace"
        android:layout_below="@+id/editTxt_latitude"
        android:layout_alignEnd="@+id/editTxt_latitude" />

    <Button
        android:id="@+id/btn_submit"
        android:hint="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_cancel"
        android:layout_alignBottom="@+id/btn_cancel"
        android:layout_toStartOf="@+id/btn_cancel"
        android:layout_marginEnd="16dp"
        android:typeface="monospace"/>

</RelativeLayout>

