<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_map"
        android:title="@string/map"
        android:icon="@drawable/ic_map_black_24dp" />

    <item android:id="@+id/action_list"
        android:title="@string/list"
        android:icon="@drawable/ic_view_list_black_24dp" />

    <item android:id="@+id/action_graph"
        android:title="@string/graph"
        android:icon="@drawable/ic_show_chart_black_24dp" />

    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp" />
</menu>