<resources>
    <string name="app_name">Ratatouille</string>
    <string name="finding_remy">Finding Remy</string>

    <string name="username">Username/Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="radio_admin">Admin</string>
    <string name="radio_user">User</string>

    <string name="not_found">.NOT FOUND.</string>

    <string name="Date">Date</string>
    <string name="LocationType">LocationType</string>
    <string name="IncidentZip">IncidentZip</string>
    <string name="IncidentAddress">IncidentAddress</string>
    <string name="Longitude">Longitude</string>
    <string name="Latitude">Latitude</string>
    <string name="Borough">Borough</string>
    <string name="City">City</string>

    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="Submit">Submit</string>
    <string name="YYYY_MM_DD">YYYY_MM_DD</string>

    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="sort">SORT</string>
    <string name="desc">DESC</string>
    <string name="asc">ASC</string>

    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="graph">Graph</string>
    <string name="settings">Settings</string>

</resources>
