<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTxt_logUsername"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        style="@style/EditTextStyle"/>

    <EditText
        android:id="@+id/editTxt_logPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/editTxt_logUsername"
        android:layout_marginTop="10dp"
        style="@style/EditTextStyle"/>

    <Button
        android:id="@+id/btn_logLogin"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxt_logPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:typeface="monospace"/>

</RelativeLayout>