<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTxt_regUsername"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="125dp"
        style="@style/EditTextStyle"/>

    <EditText
        android:id="@+id/editTxt_regPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/editTxt_regUsername"
        android:layout_marginTop="10dp"
        style="@style/EditTextStyle"/>

    <EditText
        android:id="@+id/editTxt_regConfirm"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_below="@+id/editTxt_regPassword"
        android:layout_marginTop="10dp"
        style="@style/EditTextStyle"/>

    <RadioGroup
        android:id="@+id/radio_regType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editTxt_regConfirm"
        android:layout_marginTop="25dp">

        <RadioButton
            android:id="@+id/radioBtn_user"
            android:text="@string/radio_user"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioBtn_admin"
            android:text="@string/radio_admin"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_regRegister"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_regType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:typeface="monospace"/>

</RelativeLayout>